# pyphonebot-extra

./: LICENSE  README.md  setup.cfg  setup.py
pyphonebot_extra/app/: app_utils.py  cyclic_trajectory_gui.py  demo_genetic_algorithm.py  demo_graph_viewer.py  demo_kinematics.py  demo_point_tracker.py  demo_pybullet.py  demo_replay_state.py  demo_rotation_controller.py  demo_viewer_client.py  demo_viewer_server.py  demo_walker.py  get_nominal_position.py  plot_gait_profile.py  run_agent.py
pyphonebot_extra/assets/: hull_xy.pickle  phonebotx1.xml
pyphonebot_extra/assets/gazebo/: control.yaml  robot.urdf
pyphonebot_extra/sim/common/: model.py  phonebot_model.py
pyphonebot_extra/sim/gazebo/: env.py  model.py  ros.sh
pyphonebot_extra/sim/mujoco/: README.md
pyphonebot_extra/sim/pybullet/: README.md  builder.py  debug_utils.py  sensor.py  simulator.py  task.py  urdf_editor.py
pyphonebot_extra/vis/: primitives.py  vis_utils.py
pyphonebot_extra/vis/viewer/: phonebot_viewer.py  proxy_command.py  proxy_commands.py  proxy_viewer.py  viewer.py
scripts/demo/: demo_graph_viewer.py  demo_kinematics.py  demo_point_tracker.py  demo_pybullet.py  demo_replay_state.py  demo_rotation_controller.py  demo_viewer_client.py  demo_viewer_server.py  demo_walker.py
scripts/test/: test_circle_world_planner.py  test_point_planner.py  test_proxy_viewer.py  test_pyqtgraph_keypress.py  test_serialize.py  test_transform_interpolation.py  test_viewer.py
scripts/tool/: cyclic_trajectory_gui.py  get_nominal_position.py
src/phonebot/app/: app_utils.py  demo_kinematics.py  demo_walker.py  (+2 more)
(+29 files in other folders)
