[metadata]
name = pyphonebot-extra
version = 0.0.1
description = Non-core pyphonebot software such as visualization and simulation.
long_description = file: README.md
url = https://github.com/vi-robotics/pyphonebot_extra
author = Yoonyoung Cho, Maximilian Schommer
author_email = jchocholate@gmail.com
keywords = robotics
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
package_dir =
    = src
packages = find_namespace:
include_package_data=True
python_requires = >=3.6
setup_requires =
    setuptools >= 41.2.0
install_requires =
    pyphonebot_core @ git+ssh://git@github.com/vi-robotics/pyphonebot-core@planning
    pyqtgraph
    PyQt5==5.14 # TODO(ycho): Verify if still needed
    cho_util
    networkx
    pyopengl
    argcomplete
    gym
    pybullet
    shapely
    dataclasses;python_version<'3.7'
    matplotlib

[options.packages.find]
where = src
include = phonebot.*
